--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
-pandas
-requests
-google-cloud-bigquery
-pandas-gbq
-tabulate
-openpyxl
+pandas==2.2.2
+requests==2.31.0
+google-cloud-bigquery==3.18.0
+pandas-gbq==0.22.0
+tabulate==0.9.0
+openpyxl==3.1.2
+numpy==1.26.4
+pyarrow==15.0.2
+db-dtypes==1.2.0
